dataset1235/2025-2/2868285114/users/1072499734/executions/4269873056_1026882843.log
== SUBMISSION (2025-08-26 22:36:55)
-- CODE: 
raio = float(input())
import math
pi = math.pi
area = pi * raio**2
print(roun(area,  4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area,  4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area,  4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area,  4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area,  4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area,  4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area,  4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:37:28)
-- CODE: 
raio = float(input())
import math
pi = math.pi
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:36:50)
-- CODE: 
raio = float(input())
import math
pi = math.pi
area = pi * raio**2
print(roun(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area, 4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area, 4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area, 4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area, 4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area, 4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roun(area, 4))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:37:29)
-- CODE: 
raio = float(input())
import math
pi = math.pi
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
